--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -22,13 +22,10 @@ html{
         .sectionShop{
             width:40vw;
             height: 100vh;
-            display:flex;
             position: fixed;
             top:0;
             right:0;
-            flex-direction: column;
-            justify-content:space-between;
-            align-items: center;
+            @extend .flexColumnBetween;
             background-color: $whiteColor;
             overflow: hidden;
             box-shadow:$boxShadowMenu ;
@@ -54,10 +51,7 @@ html{
                 .menuCartlist{
                     .choiceCartlist{
                         width: 90%;
-                        display: flex;
-                        flex-direction:column;
-                        justify-content: space-between;
-                        align-items:flex-start;
+                        @include display_flex_column_space_between_flex_start();
                         margin: $neutralMargin;
                         padding: 0px 20px;
                         height: 380px;
@@ -75,10 +69,7 @@ html{
                         }
                         .cart{
                             .category{
-                                display: flex;
-                                flex-direction: row;
-                                justify-content: space-between;
-                                align-items: center;
+                                @extend .flexRowBetween;
                                 padding: 20px 0px;
                                 border-bottom: 1px solid #e4e4e4;
                                 .titleCartlist{
@@ -90,10 +81,7 @@ html{
                                 }
                             }
                             .cartlist{
-                                display: flex;
-                                flex-direction: row;
-                                justify-content: space-between;
-                                align-items: center;
+                                @extend .flexRowBetween;
                                 padding: 20px 0px;
                                 border-bottom: $borderBottom;
                                 .total{
@@ -143,7 +131,6 @@ html{
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
-                        align-items: flex;
                         position:absolute;
                         bottom:0px;
                         left:20px;
@@ -167,10 +154,7 @@ html{
                         .btnCheckout{
                             width: 100%;
                             padding: 10px 20px;
-                            display: flex;
-                            flex-direction: column;
-                            justify-content: center;
-                            align-items: center;
+                            @extend .flexColumnCenterCenter;
                             margin:20px auto;
                             font-size: $regularText;
                             font-family: $fontJura;
@@ -199,13 +183,11 @@ html{
         .sectionWishlist{
             width:25vw;
             height: 100vh;
-            display:flex;
             position: fixed;
             top:0;
             right:0;
             z-index: 10px;
-            flex-direction: column;
-            justify-content:flex-start;
+            @extend .flexColumn;
             align-items: flex-start;
             background-color: $whiteColor;
             overflow: hidden;
@@ -231,10 +213,7 @@ html{
             .menuWishlist{
                 .choiceWishlist{
                     width: 80%;
-                    display: flex;
-                    flex-direction:column;
-                    justify-content: space-between;
-                    align-items:flex-start;
+                    @include display_flex_column_space_between_flex_start();
                     margin: $neutralMargin;
                     .wishlistWord{
                         width: inherit;
@@ -246,10 +225,7 @@ html{
                     }
                     .wish{
                         .category{
-                            display: flex;
-                            flex-direction: row;
-                            justify-content: space-between;
-                            align-items: flex-start;
+                            @include display_flex_row_space_between_flex_start();
                             padding: 20px 0px;
                             border-bottom: $borderBottom;
                             .titleWishlist{
@@ -262,10 +238,7 @@ html{
                         }
                         .wishlist{
                             .blockProduct{
-                                display: flex;
-                                flex-direction: row;
-                                justify-content: space-between;
-                                align-items: center;
+                                @extend .flexRowBetween;
                                 padding: 20px 0px;
                                 border-bottom: $borderBottom;
                                 .itemProduct{
