--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -1,12 +1,11 @@
  // Filter items
 
+//  Mixin
+
 .sectionFilter{
     .menuFilterSide{
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        @extend .flexRowBetween;
         #filterSide{
             display: none;
             &:checked ~ .menuFilter{
@@ -20,10 +19,7 @@
                 top:70px;
                 left:20px;
                 z-index: 5;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: center;
+                @extend .flexColumnBetween;
                 padding: 5px;
                 cursor:pointer;
                 .filterIcon{
@@ -68,13 +64,10 @@
         .menuFilter{
             width: 20vw;
             height: 100vh;
-            display: flex;
             position: fixed;
             top: 0;
             left: 0;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
+            @extend .flexColumnCenter;
             background-color: $whiteColor;
             overflow: hidden;
             box-shadow:$boxShadowMenu;
@@ -97,10 +90,7 @@
             }
             .choiceFilter{
                 width: 90%;
-                display: flex;
-                flex-direction:column;
-                justify-content: space-between;
-                align-items:center;
+                @extend .flexColumnBetween;
                 margin: 0px auto;
                 .filterWord{
                     width: inherit;
@@ -129,16 +119,10 @@
                         font-family: $fontJura;
                         color:$tertiaryColor;
                         .labelOne, .labelTwo, .labelThree{
-                            display: flex;
-                            flex-direction:row;
-                            justify-content: space-between;
-                            align-items:center;
+                            @extend .flexRowBetween;
                         }
                         .priceOne, .priceTwo, .priceThree{
-                            display: flex;
-                            flex-direction:row;
-                            justify-content: space-between;
-                            align-items: center;
+                            @extend .flexRowBetween;
                         }
                         input{
                             width: 16px;
@@ -149,10 +133,7 @@
                 .btnFilter{
                     width: 90%;
                     padding: 10px 20px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
+                    @extend .flexColumnCenterCenter;
                     margin:30px auto;
                     font-size: $regularText;
                     font-family: $fontJura;
