--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -1,5 +1,7 @@
 // GettOff
 
+// Mixin
+
 .getOff{
     width:$screenPercentageWidth;
     height:$screenPercentageHeight;
@@ -9,15 +11,9 @@
     background-size: cover;
     background-color: $moonBackgroundColor;
     margin: 200px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @extend .flexColumnCenterCenter;
     .containerGetOff{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        @include display_flex_row_center_center();
         padding-top:100px;
         padding-bottom: 100px;
         .info{
@@ -85,10 +81,7 @@
     .bannerGetOff{
         width: 62vw;
         height: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
+        @extend .flexColumnEvenlyCenter;
         border-radius: 10px;
         background-color:#00000013;
         box-shadow: $boxShadowMenu;
@@ -121,10 +114,7 @@
             }
         }
         .slideGetOff{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-            align-items: center;
+            @extend .flexRowEvenlyCenter;
             padding: 20px;
             backdrop-filter: blur(10px);
             .hoddy{
