--- a/scss/_gift_Card.scss
+++ b/scss/_gift_Card.scss
@@ -1,5 +1,7 @@
 // Gift Cards
 
+// Mixin
+
 .giftCards{
     width:$screenPercentageWidth;
     max-width: 1000px;
@@ -13,10 +15,7 @@
         margin-bottom: 100px;
     }
     .containerGetOff{
-        display:flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        @extend .flexRowBetween;
         .containerCards{
             width:80%;
             height: auto;
@@ -62,10 +61,7 @@
         }
         .containerMessage{
             width: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
+            @extend .flexColumnCenter;
             .subtitleMessage{
                 font-size:$sectionSubtitle;
                 font-family: $fontJura;
