--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,9 +1,90 @@
-// Mixins
 
-// .newArrivals, .bestSellers, .containerStore{
-//     max-width: 1300px;
-//     margin: 0px auto;
-//     padding: 0px 30px;
-// }
+/******************* Extend ******************/
+.flexColumn{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 
-// Extend
+.flexColumnBetween{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.flexRowBetween{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.flexColumnFlexEnd{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+.flexColumnCenter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.flexColumnCenterCenter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.flexColumnEvenlyCenter{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.flexRowEvenlyCenter{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.flexRowCenterStart{
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: flex-start;
+}
+
+
+/******************* Mixins ******************/
+
+@mixin display_flex_column_space_between_flex_start(){
+    display:flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: flex-start;
+}
+@mixin display_flex_column_space_around_flex_start(){
+    display:flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: flex-start;
+}
+@mixin display_flex_row_space_between_flex_start(){
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: flex-start;
+}
+@mixin display_flex_row_center_center(){
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+}
+@mixin display_flex_row_space_between_flex_start(){
+    display:flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: flex-start;
+}
