--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -1,12 +1,11 @@
 // Show Room
 
+// Mixin
+
 .showRoom{
     width: 80%;
     height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    @include display_flex_row_space_between_flex_start();
     margin: 150px auto;
     // overflow: hidden;
     font-family: $fontJura;
@@ -34,10 +33,7 @@
             gap: 20px;
             .productRating{
                 width: 100%;
-                display:flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
+                @extend .flexRowBetween;
                 padding: 5px 5px ;
                 background-color: $backgroundColor;
                 .product{
@@ -52,9 +48,7 @@
             .color{
                 width: 100%;
                 height:auto;
-                display:flex;
-                flex-direction: column;
-                align-items: flex-start;
+                @extend .flexColumn;
                 margin: 10px auto;
                 .titleColor{
                     font-size: $MediumTitle;
@@ -146,10 +140,7 @@
             .size{
                 width: 100%;
                 height:auto;
-                display:flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: flex-start;
+                @include display_flex_column_space_between_flex_start();
                 margin: 10px auto;
                 .titleSize{
                     font-size: $MediumTitle;
@@ -182,10 +173,7 @@
             }
             .addToCart{
                 width:100%;
-                display:flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
+                @extend .flexRowBetween;
                 gap:20px;
                 margin: 20px auto;
                 position: relative;
@@ -246,10 +234,7 @@
             }
             .complementInfo{
                 width:100%;
-                display:flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: flex-start;
+                @include display_flex_row_space_between_flex_start();
                 gap:40px;
                 color: $blackColor;
                 font-size: $xSmallText;
@@ -319,10 +304,7 @@
                             }
                             .opinion{
                                 width: 100%;
-                                display: flex;
-                                flex-direction: row;
-                                justify-content: space-between;
-                                align-items: center;
+                                @extend .flexRowBetween;
                                 .itemProduct{
                                     width:auto;
                                     height: 70px;
@@ -344,10 +326,7 @@
                         }
                     }
                     .accordionBodyDos{
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
+                        @extend .flexColumnCenterCenter;
                         p{
                             font-size: $xSmallText;
                             font-weight: $mediumBold;
