--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -1,5 +1,7 @@
 // Store
 
+// Mixin
+
 .containerStore{
     margin: 100px auto 150px;
     .tagGetoff{
@@ -57,10 +59,7 @@
         .bannerGetOff{
             width: 62vw;
             height: auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
+            @extend .flexColumnEvenlyCenter;
             border-radius: 10px;
             background-color:#00000013;
             box-shadow: 0 0 6px 4px black;
@@ -93,10 +92,7 @@
                 margin-top:20px;
             }
             .slideGetOff{
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-                align-items: center;
+                @extend .flexRowEvenlyCenter;
                 padding: 20px;
                 backdrop-filter: blur(10px);
                 .hoddy{
@@ -162,9 +158,7 @@
                     }
                     .info{
                         width:101%;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: flex-start;
+                        @extend  .flexColumn;
                         color: #D9D9D9;
                         font-weight: 500;
                         font-family: $fontJura;
@@ -206,9 +200,6 @@
                         filter: grayscale(10%);
                         box-shadow: 0 0 4px 2px #707070;
                         transition: all 0.3s ease;
-                        // &:hover > .info{
-                        //     filter: grayscale(100%);
-                        // }
                     }
                 }
             }
