--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -1,5 +1,7 @@
  // Wishlist
 
+// Mixin
+
 #wishlistSide{
     display: none;
     &:checked ~ .sectionWishlist{
@@ -9,14 +11,11 @@
 .sectionWishlist{
     width:25vw;
     height: 100vh;
-    display:flex;
     position: fixed;
     top:0;
     right:0;
     z-index: 10px;
-    flex-direction: column;
-    justify-content:flex-start;
-    align-items: flex-start;
+    @extend .flexColumn;
     background-color: $whiteColor;
     overflow: hidden;
     box-shadow: $boxShadowMenu;
@@ -41,10 +40,7 @@
     .menuWishlist{
         .choiceWishlist{
             width: 80%;
-            display: flex;
-            flex-direction:column;
-            justify-content: space-between;
-            align-items:flex-start;
+            @include display_flex_column_space_between_flex_start();
             margin:  $neutralMargin;
             .wishlistWord{
                 width: inherit;
@@ -56,10 +52,7 @@
             }
             .wish{
                 .category{
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: flex-start;
+                    @include display_flex_row_space_between_flex_start();
                     padding: 20px 0px;
                     border-bottom: $borderBottom;
                     .titleWishlist{
@@ -72,10 +65,7 @@
                 }
                 .wishlist{
                     .blockProduct{
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                        align-items: center;
+                        @extend .flexRowBetween;
                         padding: 20px 0px;
                         border-bottom: $borderBottom;
                         .itemProduct{
