--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -324,16 +324,19 @@
                                 <img src="../img/pic25.webp" alt="" class="itemProduct">
                                 <div class="toolTip">
                                     <p>Color</p>
+                                    <div class="clipPath"></div>
                                 </div>
                             </div>
                             <div class="colorBlack">
                                 <div class="toolTip">
                                     <p> Black</p>
+                                    <div class="clipPath"></div>
                                 </div>
                             </div>
                             <div class="colorWhite">
                                 <div class="toolTip">
                                     <p>White</p>
+                                    <div class="clipPath"></div>
                                 </div>
                             </div>
                         </div>
@@ -354,6 +357,7 @@
                         <img class="wishlistIcon" src="../img/wishlist_Icon.svg" alt="">
                         <div class="toolTip">
                             <p class="toolTipMessage">Wishlist</p>
+                            <div class="clipPath"></div>
                         </div>
                     </article>
                     <article class="complementInfo">
