--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -78,6 +78,7 @@
                     </label>
                     <article class="toolTip">
                         <p class="toolTipMessage">Menu</p>
+                        <dic class="clipPath"></dic>
                     </article>
                 </li>
                 <li>
@@ -86,6 +87,7 @@
                     </label>
                     <article class="toolTip">
                         <p class="toolTipMessage">Wishlist</p>
+                        <dic class="clipPath"></dic>
                     </article>
                 </li>
                 <li>
@@ -94,6 +96,7 @@
                     </label>
                     <article class="toolTip">
                         <p class="toolTipMessage">My cart</p>
+                        <dic class="clipPath"></dic>
                     </article>
                 </li>
             </ul>
