--- a/views/store.html
+++ b/views/store.html
@@ -176,7 +176,8 @@
                 <label for="filterSide" class="headLine">
                     <div class="filter">
                         <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filterWord">Filter</p>
+
+                        <p class="filterWord">Filter <span class="clipPath"></span></p>
                     </div>
                 </label>
                 <p class="subtitle">"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
