--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <!-- Normalize -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel='stylesheet'>
+    <!-- Emoji -->
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <!-- Meta para SEO -->
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -622,9 +624,11 @@
         <section class="development">
             <img class="raccoon" src="../img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
+                <i class="em em-flag-co" aria-role="presentation" aria-label="Colombia Flag"></i>
                 <p>Developed and made with 💖 by Diego Marin </p>
                 <p>© 2023 <span class="raccoon">Raccoon</span>. All rights reserved.</p>
                 <p> Medellin - Colombia</p>
+                <i class="em em-flag-ca" aria-role="presentation" aria-label="Canada Flag"></i>
             </div>
         </section>
     </footer>
