--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -602,7 +602,7 @@
 
     <footer class="footerContainer">
         <div class="footer">
-            <section class="socialMedia">
+            <section class="socialMediaFooter">
                 <h3 class="contactUs">Contact us..</h3>
                 <ul>
                     <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
