--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,25 +14,30 @@
         @extend .flexRowBetween;
         padding: 50px 50px;
         position: relative;
-        .socialMedia{
+        .socialMediaFooter{
+            @extend .flexColumnCenter;
             .contactUs{
                 font-family: $fontJura;
                 font-weight: $bold;
                 font-size: $smallText;
-                color:$secondaryColor;
+                color: $secondaryColor;
+                padding: 0px 0px;
+                align-items: flex-start;
             }
             ul{
-                @extend .flexRowCenterStart;
-                margin-left: -40px;
+                display: flex;
+                margin-bottom: 0px;
                 padding-top: 10px;
-                // border-top: 1px solid rgb(61, 61, 61);
+                padding-left: 0px;
+                border-top: $borderTop;
+                gap:10px;
                 li{
                     list-style-type: none;
+                    align-items: flex-start;
                     .item{
                         text-decoration: none;
                         .itemSocial{
-                            width:30px;
-                            margin: 0px 5px;
+                            width:28px;
                         }
                     }
                 }
@@ -49,15 +54,13 @@
                 color:$primaryColor;
             }
             .skull{
-                width:35px;
+                width:32px;
             }
         }
         .payments{
             @extend .flexColumnCenter;
-
-
             h3{
-                width: 55%;
+                width: 60%;
                 font-family: $fontJura;
                 font-weight: $bold;
                 font-size: $smallText;
@@ -66,9 +69,10 @@
                 align-self: flex-end;
             }
             .paymentCards{
-                width: 55%;
+                width: 60%;
                 align-self: flex-end;
                 padding-top: 10px;
+                border-top: $borderTop;
             }
         }
     }
